Removing the asynchronous python3 server call.

BUG: 373150